@@ -1,9 +1,12 @@
 apt (0.9.6.1) UNRELEASED; urgency=low
 
   [ David Kalnischkies ]
-  * deb/deblistparser.cc:
+  * apt-pkg/deb/deblistparser.cc:
     - ensure that mixed positive/negative architecture wildcards
       are handled in the same way as dpkg handles them
+    - use PackageArchitectureMatchesSpecification filter
+  * apt-pkg/cachefilter.cc:
+    - add PackageArchitectureMatchesSpecification (Closes: #672603)
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Thu, 14 Jun 2012 15:45:13 +0200
 
